# haskell_playground

./: HaskellPlayground.cabal  dev.sh  readme.md  run.sh  test.sh
src/: Main.hs  Playground.hs
src/Playground/: Parser.hs
tests/HaskellPlayground/: PlaygroundSpec.hs
