name:           Playground
version:        0.0
synopsis:       Benjamin's Playground 
author:         Benjamin van der Veen
license:        MIT
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs: src
  ghc-options:         -Wall -O2 -threaded
  build-depends:  base, 
                  text, 
                  parsec
  default-language:    Haskell2010
  exposed-modules: 
                  Playground, 
                  Playground.Parser

executable Playground
  hs-source-dirs: src
  ghc-options:         -Wall -O2 -threaded
  build-depends:  base, 
                  text
  main-is:        Main.hs
  default-language:    Haskell2010

test-suite TestPlayground
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  ghc-options:         -Wall -O2 -threaded
  main-is:             MainTest.hs
  build-depends:       base,
                       hspec >= 2.1.4,
                       hspec-discover >= 2.1.4,
                       text >= 1.2,
                       wl-pprint-text,
                       Playground
  default-language:    Haskell2010

